--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sapper": "^0.27.8",
     "svelte": "^3.9.1",
     "svelte-i18n": "^3.0.3",
+    "svelte-popover": "^2.0.8",
     "svelte-preprocess": "^3.7.4",
     "tailwindcss": "^1.4.6"
   }
